ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <label>Country Data</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Country</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>