ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Country__c/fields/Country_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Country_Lead_Time__c</fullName>
    <label>Country Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>