ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Country__c/fields/Currencytypeid__c.field-meta.xml
<CustomField>
    <fullName>Currencytypeid__c</fullName>
    <label>Currencytypeid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>